Feat: ac.t 프로젝트 카드 정리

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,3 +4,13 @@
 @import "moonwalk";
 @import "list";
 @import "syntax";
+
+.project-container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 2rem;
+}
+
+.project-content {
+  margin-top: 2rem;
+}
