--- a/_includes/custom_head.html
+++ b/_includes/custom_head.html
@@ -1,3 +1,2 @@
-{% comment %}
-  Placeholder to allow defining custom head. You can put favicons and other custom header fields here
-{% endcomment %}
+{% comment %} Placeholder to allow defining custom head. You can put favicons
+and other custom header fields here {% endcomment %}
